--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -558,7 +558,7 @@ body {
 
 .a11ytb-view-container {
   position: relative;
-  display: grid;
+  display: flex;
   min-height: 0;
   height: 100%;
 }
@@ -1639,6 +1639,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 0;
+  flex: 1 1 auto;
 }
 
 .a11ytb-organize-scroll {
